# xmonad-vanessa

./: LICENSE  README.md  TODO.md  stack-7.yaml  stack-nightly.yaml  stack.yaml  xmonad-vanessa.cabal
app/: Main.hs  ParseKBLayout.hs
src/: Config.hs
src/XMonad/Config/: Vanessa.hs
src/XMonad/Util/: Brightness.hs  Keyboard.hs  MediaKeys.hs  Volume.hs
test/: Spec.hs
