name:                xmonad-vanessa
version:             0.1.0.0
synopsis:            Custom xmonad, via stack
description:         Please see README.md
homepage:            https://github.com/vmchale/xmonad-vanessa#readme
license:             BSD3
license-file:        LICENSE
author:              Vanessa McHale
maintainer:          tmchale@wisc.edu
copyright:           2016 Vanessa McHale
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     XMonad.Config.Vanessa
  build-depends:       base >= 4.7 && < 5
                     , xmonad
                     , xmonad-contrib
                     , xmonad-extras
                     , containers
                     , process
                     , X11
  default-language:    Haskell2010

executable xmonad
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , xmonad-vanessa
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vmchale/xmonad-vanessa
