name:                xmonad-vanessa
version:             0.1.0.2
synopsis:            Custom xmonad, which uses stack and sets various defaults
description:         Please see README.md
homepage:            https://github.com/vmchale/xmonad-vanessa#readme
license:             BSD3
license-file:        LICENSE
author:              Vanessa McHale
maintainer:          tmchale@wisc.edu
copyright:           2016 Vanessa McHale
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     XMonad.Config.Vanessa
                     , XMonad.Util.Brightness
                     , XMonad.Util.Keyboard
                     , XMonad.Util.Volume
                     , XMonad.Util.MediaKeys
  build-depends:       base >= 4.7 && < 5
                     , xmonad
                     , xmonad-contrib
                     , xmonad-extras
                     , containers
                     , process
                     , X11
                     , transformers
  default-language:    Haskell2010

executable xmonad
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O3 -fllvm -optlo-O3
  build-depends:       base
                     , xmonad-vanessa
  default-language:    Haskell2010

executable getkb
  hs-source-dirs:      app
  main-is:             ParseKBLayout.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fllvm -O3 -optlo-O3
  build-depends:       base
                     , xmonad-vanessa
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vmchale/xmonad-vanessa
