name:                xmonad-vanessa
version:             0.1.1.0
synopsis:            Custom xmonad, which uses stack and sets various defaults
description:         Please see README.md
homepage:            https://github.com/vmchale/xmonad-vanessa#readme
license:             BSD3
license-file:        LICENSE
author:              Vanessa McHale
maintainer:          tmchale@wisc.edu
copyright:           2016 Vanessa McHale
category:            Web
build-type:          Simple
extra-source-files:  README.md, stack.yaml
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     XMonad.Config.Vanessa
                     , XMonad.Util.Brightness
                     , XMonad.Util.Keyboard
                     , XMonad.Util.Volume
                     , XMonad.Util.MediaKeys
  build-depends:       base >= 4.7 && < 5
                     , xmonad >= 0.13
                     , xmonad-contrib
                     , containers
                     , process
                     , X11
                     , transformers
  default-language:    Haskell2010

executable xmonad
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O3 -fllvm -optlo-O3
  build-depends:       base
                     , xmonad-vanessa
  default-language:    Haskell2010

executable getkb
  hs-source-dirs:      app
  main-is:             ParseKBLayout.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fllvm -O3 -optlo-O3
  build-depends:       base
                     , xmonad-vanessa
  default-language:    Haskell2010

test-suite xmonad-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , xmonad-vanessa
                     , hspec
                     , xmonad
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N 

source-repository head
  type:     git
  location: https://github.com/vmchale/xmonad-vanessa
